tests/fail/unwrap.glu
let { Option, unwrap }  = import! std.option

unwrap None
